RESOLVED FIXED60501
Abstract line deletion code into a function
https://bugs.webkit.org/show_bug.cgi?id=60501
Summary Abstract line deletion code into a function
Eric Seidel (no email)
Reported 2011-05-09 14:08:39 PDT
Abstract line deletion code into a function
Attachments
causes crashes, unsure why (5.47 KB, patch)
2011-05-09 14:09 PDT, Eric Seidel (no email)
no flags
Patch (4.61 KB, patch)
2011-05-09 14:28 PDT, Eric Seidel (no email)
no flags
Eric Seidel (no email)
Comment 1 2011-05-09 14:09:15 PDT
Created attachment 92846 [details] causes crashes, unsure why
Eric Seidel (no email)
Comment 2 2011-05-09 14:28:04 PDT
WebKit Commit Bot
Comment 3 2011-05-09 15:27:39 PDT
Comment on attachment 92850 [details] Patch Clearing flags on attachment: 92850 Committed r86093: <http://trac.webkit.org/changeset/86093>
WebKit Commit Bot
Comment 4 2011-05-09 15:27:45 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 5 2011-05-09 17:21:04 PDT
http://trac.webkit.org/changeset/86093 might have broken GTK Linux 64-bit Debug
Note You need to log in before you can comment on or make changes to this bug.