2011-05-09  Eric Seidel  <eric@webkit.org>

Reviewed by Ryosuke Niwa.

        Abstract line deletion code into a function
        https://bugs.webkit.org/show_bug.cgi?id=60501

        No change in behavior, thus no testing.

        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::deleteLineRange):
        (WebCore::RenderBlock::layoutRunsAndFloats):
        (WebCore::RenderBlock::determineStartPosition):
        (WebCore::RenderBlock::matchedEndLine):

Canonical link: https://commits.webkit.org/75766@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86093 268f45cc-cd09-0410-ab3c-d52691b4dbfc